BUG-423: Prevent article-header box-shadow to overlap the background

--- a/sass/web.campus/modules/_main.sass
+++ b/sass/web.campus/modules/_main.sass
@@ -1,3 +1,4 @@
 .main--article,
 .main--gallery
 	+padded
+	overflow: hidden // prevent article-header box-shadow to overlap the scenery
